--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "postcss": "8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-tsparticles": "^2.9.3",
     "tailwindcss": "3.3.1",
+    "tsparticles": "^2.9.3",
+    "tsparticles-engine": "^2.9.3",
     "typescript": "5.0.4"
   }
 }
