--- a/package.json
+++ b/package.json
@@ -9,21 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "18.15.11",
-    "@types/react": "18.0.33",
-    "@types/react-dom": "18.0.11",
+    "@types/classnames": "^2.3.1",
+    "@types/node": "20.1.0",
+    "@types/react": "18.2.6",
+    "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "classnames": "^2.3.2",
-    "eslint": "8.38.0",
-    "eslint-config-next": "13.3.0",
-    "next": "13.3.0",
-    "postcss": "8.4.21",
+    "eslint": "8.40.0",
+    "eslint-config-next": "13.4.1",
+    "next": "13.4.1",
+    "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-tsparticles": "^2.9.3",
-    "tailwindcss": "3.3.1",
-    "tsparticles": "^2.9.3",
-    "tsparticles-engine": "^2.9.3",
+    "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   }
 }
